# Raytracing_Cuda

./: .~lock.Resultats.xlsx#  CMakeLists.txt  README.md  Resultats.xlsx  Resultats_graphes.xlsx
Cameras/: camera.cpp  camera.h
GPU/: CMakeLists.txt
GPU/GeometricsObjects/: forms.cu  forms.h
GPU/Geometry/: geometry.cu  geometry.h
GPU/Utils/: camera.cu  camera.h  light.cu  light.h  scene.cu  scene.h
GPU/bash/: main.sh
GPU/src/: CMakeLists.txt  main.cu
GPU/tests/: CMakeLists.txt  tests.cpp
GeometricObjects/: formes.cpp  formes.h  scenes.h  sphere.cpp
GeometricsObjects/: forms.cpp  forms.h
Geometry/: geometry.cpp  geometry.h
Sequential/: CMakeLists.txt
Sequential/Geometry/: geometry.cpp  geometry.h
Sequential/Utils/: light.cpp  scene.cpp  scene.h
Sequential/src/: main.cpp
Utils/: camera.cpp  camera.h  light.cpp  light.h  scene.cpp  scene.h
bash/: main.sh  tests.sh
src/: CMakeLists.txt  main.cpp
